ANDROID: uid_sys_stats: rename uid_cputime.c to uid_sys_stats.c
This module tracks cputime and io stats.

Signed-off-by: Jin Qian <jinqian@google.com>
Bug: 34198239
Change-Id: I9ee7d9e915431e0bb714b36b5a2282e1fdcc7342

Conflicts:
	drivers/misc/Kconfig
	drivers/misc/Makefile
Signed-off-by: Francisco Franco <franciscofranco.1990@gmail.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -554,7 +554,7 @@ config TIMA_LOG
 	depends on TIMA
 	default y
 	help
-		This option enables support for dumping TIMA log.
+          This option enables support for dumping TIMA log.
 
 config SEC_FPGA_ICE40XX
         tristate "this feature allows FPGA_ICE40XX"
@@ -564,6 +564,15 @@ config SEC_FPGA_ICE40XX
           Lattice FPGA can support IR LED.
           To compile this driver as a module, choose M here.
           If unsure, say N.
+	  This option enables support for dumping TIMA log.
+
+config UID_SYS_STATS
+	tristate "Per-UID statistics"
+	depends on PROFILING
+	default y
+	help
+	  Per UID based cpu time statistics exported to /proc/uid_cputime
+	  Per UID based io statistics exported to /proc/uid_io
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
