zero: added defconfigs for can/spr
Change-Id: Id8b47a6c616bbb2cc5b16eaa92513d623a104e37

--- a/arch/arm64/configs/lineageos_zerofltecan_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltecan_defconfig
@@ -451,7 +451,7 @@ CONFIG_SECCOMP=y
 #
 CONFIG_CMDLINE=""
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zeroflte_eur_open_00 exynos7420-zeroflte_eur_open_01 exynos7420-zeroflte_eur_open_02 exynos7420-zeroflte_eur_open_03 exynos7420-zeroflte_eur_open_04 exynos7420-zeroflte_eur_open_05 exynos7420-zeroflte_eur_open_06 exynos7420-zeroflte_eur_open_07"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zeroflte_usa_00 exynos7420-zeroflte_usa_01 exynos7420-zeroflte_usa_02 exynos7420-zeroflte_usa_03 exynos7420-zeroflte_usa_04 exynos7420-zeroflte_usa_05"
 CONFIG_ARM64_APPENDED_DTB=y
 
 #
@@ -2950,10 +2950,10 @@ CONFIG_SND_SOC_DUMMY_CODEC=y
 #
 # Audience earSmart codecs
 #
-# CONFIG_SND_SOC_ES705 is not set
+CONFIG_SND_SOC_ES705=y
 # CONFIG_SND_SOC_ES704 is not set
 # CONFIG_SND_SOC_ES804 is not set
-# CONFIG_SND_SOC_ES_I2C is not set
+CONFIG_SND_SOC_ES_I2C=y
 # CONFIG_SND_SOC_ESXXX_UART_FW_DOWNLOAD is not set
 # CONFIG_SND_SOC_ESXXX_UART_WAKEUP is not set
 # CONFIG_SND_SOC_3MIC_SUPPORT is not set
@@ -4076,8 +4076,7 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
-CONFIG_SDCARD_FS_CI_SEARCH=y
-CONFIG_SDCARD_FS_XATTR=y
+# CONFIG_SDCARD_FS_FADV_NOACTIVE is not set
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
@@ -4166,12 +4165,12 @@ CONFIG_ECRYPT_FS=y
 # CONFIG_ECRYPT_FS_MESSAGING is not set
 CONFIG_WTL_ENCRYPTION_FILTER=y
 CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
-CONFIG_SDP=y
+# CONFIG_SDP is not set
 # CONFIG_SDP_KEY_DUMP is not set
-CONFIG_DLP=y
-CONFIG_SCFS=y
+# CONFIG_DLP is not set
+# CONFIG_SCFS is not set
 # CONFIG_SYSTEM_COMPRESSED is not set
-CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION=y
+# CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION is not set
 # CONFIG_SCFS_USE_CRYPTO is not set
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
