--- a/arch/arm64/configs/lineageos_zeroltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zeroltexx_defconfig
@@ -104,10 +104,10 @@ CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
-# CONFIG_CPUSETS is not set
+CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
@@ -253,11 +253,10 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
-CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_NOOP is not set
+CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_NOOP=y
+CONFIG_DEFAULT_CFQ=y		
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -330,12 +329,12 @@ CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_SUBSYSTEM_RESTART is not set
 # CONFIG_MSM_SYSMON_COMM is not set
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_DMAP_PROT=y
-CONFIG_RKP_NS_PROT=y
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_RKP is not set
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_DMAP_PROT is not set
+# CONFIG_RKP_NS_PROT is not set
 # CONFIG_SEC_BAT_AUT is not set
 
 #
@@ -451,7 +450,9 @@ CONFIG_SECCOMP=y
 # Boot options
 #
 CONFIG_CMDLINE=""
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zeroflte_eur_open_06"
+CONFIG_ARM64_APPENDED_DTB=y
 
 #
 # Userspace binary formats
@@ -492,7 +493,7 @@ CONFIG_ARCH_HAS_OPP=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
@@ -506,19 +507,14 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_MODE_AUTO_CHANGE=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -621,23 +617,22 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
+# CONFIG_INET_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
-# CONFIG_TCP_CONG_HSTCP is not set
-# CONFIG_TCP_CONG_HYBLA is not set
-# CONFIG_TCP_CONG_VEGAS is not set
-# CONFIG_TCP_CONG_SCALABLE is not set
-# CONFIG_TCP_CONG_LP is not set
-# CONFIG_TCP_CONG_VENO is not set
-# CONFIG_TCP_CONG_YEAH is not set
-# CONFIG_TCP_CONG_ILLINOIS is not set
-CONFIG_DEFAULT_BIC=y
-# CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bic"
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_SEC_LOCALE_CHN is not set
 CONFIG_IPV6=y
@@ -816,7 +811,7 @@ CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
-# CONFIG_IP_NF_MATCH_RPFILTER is not set
+CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -852,7 +847,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_HL is not set
 # CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
 # CONFIG_IP6_NF_MATCH_MH is not set
-# CONFIG_IP6_NF_MATCH_RPFILTER is not set
+CONFIG_IP6_NF_MATCH_RPFILTER=y
 # CONFIG_IP6_NF_MATCH_RT is not set
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
@@ -2737,13 +2732,13 @@ CONFIG_EXYNOS_DECON_MDNIE_LITE=y
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 # CONFIG_EXYNOS_DECON_LCD_MCD is not set
 CONFIG_LCD_HMT=y
-# CONFIG_LCD_ALPM is not set
+# CONFIG_LCD_ALPM=y
 CONFIG_LCD_BURNIN_CORRECTION=y
 CONFIG_LCD_HBM_INTERPOLATION=y
 CONFIG_PANEL_AID_DIMMING=y
 # CONFIG_LCD_DOZE_MODE is not set
-# CONFIG_PANEL_S6E3HF2_DYNAMIC is not set
-CONFIG_PANEL_S6E3HA2_DYNAMIC=y
+CONFIG_PANEL_S6E3HF2_DYNAMIC=y
+# CONFIG_PANEL_S6E3HA2_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HA3_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HF3_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_A8XE is not set
@@ -3645,6 +3640,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
+CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -4392,10 +4388,10 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 #
 # Security options
