--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+
+# Xodia
+security/selinux_n/av_permissions.h
+security/selinux_n/flask.h
