--- a/arch/arm64/configs/lineageos_zerofltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltexx_defconfig
@@ -1157,7 +1157,7 @@ CONFIG_KNOX_KAP=y
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
-CONFIG_UID_CPUTIME=y
+CONFIG_UID_SYS_STATS=y
 CONFIG_CHECK_SIMSLOT_COUNT=y
 # CONFIG_CHECK_GPIO_DETECT is not set
 CONFIG_TIMA_LOG=y
