arm64/configs: zeroxlte: Regenerate defconfigs to reflect latest changes
Signed-off-by: Lunarixus <Nathanb644@hotmail.co.uk>

--- a/arch/arm64/configs/lineageos_zeroltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zeroltexx_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.61 Kernel Configuration
+# Linux/arm64 3.10.108 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -13,7 +13,6 @@ CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_STACKTRACE_SUPPORT=y
-CONFIG_HAVE_LATENCYTOP_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
@@ -108,6 +107,7 @@ CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
@@ -253,10 +253,12 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_NOOP=y
-CONFIG_DEFAULT_CFQ=y		
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_CFQ=y
+# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -305,7 +307,6 @@ CONFIG_S5P_SLEEP=y
 CONFIG_ARCH_EXYNOS7=y
 CONFIG_SOC_EXYNOS7420=y
 # CONFIG_SOC_EXYNOS7420_EVT_0 is not set
-# CONFIG_SOC_EXYNOS7580 is not set
 CONFIG_EXYNOS_ASV=y
 # CONFIG_EXYNOS_ASV_DYNAMIC_ABB is not set
 CONFIG_EXYNOS_ASV_SUPPORT_RCC=y
@@ -323,18 +324,12 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 #
 # CONFIG_MACH_ESPRESSO7420 is not set
 CONFIG_MACH_UNIVERSAL7420=y
-# CONFIG_MACH_SMDK7580 is not set
-# CONFIG_MACH_UNIVERSAL7580 is not set
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_SUBSYSTEM_RESTART is not set
 # CONFIG_MSM_SYSMON_COMM is not set
 # CONFIG_TIMA is not set
-# CONFIG_TIMA_LKMAUTH is not set
-# CONFIG_TIMA_RKP is not set
-# CONFIG_RKP_KDP is not set
-# CONFIG_RKP_DMAP_PROT is not set
-# CONFIG_RKP_NS_PROT is not set
+CONFIG_TIMA_LKMAUTH=y
 # CONFIG_SEC_BAT_AUT is not set
 
 #
@@ -452,7 +447,6 @@ CONFIG_SECCOMP=y
 CONFIG_CMDLINE=""
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zeroflte_eur_open_06"
-CONFIG_ARM64_APPENDED_DTB=y
 
 #
 # Userspace binary formats
@@ -505,16 +499,22 @@ CONFIG_FOTA_LIMIT=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
+CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_MODE_AUTO_CHANGE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -614,24 +614,28 @@ CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_MODE_BEET=y
 # CONFIG_INET_LRO is not set
-CONFIG_INET_DIAG=y
-CONFIG_INET_TCP_DIAG=y
-# CONFIG_INET_UDP_DIAG is not set
 # CONFIG_INET_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_HSTCP=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_HYBLA=y
-CONFIG_TCP_CONG_ILLINOIS=y
-CONFIG_TCP_CONG_LP=y
-CONFIG_TCP_CONG_SCALABLE=y
 CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
 CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_SEC_LOCALE_CHN is not set
@@ -679,6 +683,7 @@ CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
+# CONFIG_NF_CONNTRACK_ZONES is not set
 CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_CONNTRACK_EVENTS=y
 # CONFIG_NF_CONNTRACK_TIMEOUT is not set
@@ -1157,11 +1162,11 @@ CONFIG_KNOX_KAP=y
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
-CONFIG_UID_SYS_STATS=y
+# CONFIG_UID_CPUTIME is not set
 CONFIG_CHECK_SIMSLOT_COUNT=y
 # CONFIG_CHECK_GPIO_DETECT is not set
-CONFIG_TIMA_LOG=y
 # CONFIG_SEC_FPGA_ICE40XX is not set
+CONFIG_UID_SYS_STATS=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1260,7 +1265,6 @@ CONFIG_SCSI_MOD=y
 # CONFIG_RAID_ATTRS is not set
 CONFIG_SCSI=y
 CONFIG_UFS_FMP_DM_CRYPT=y
-CONFIG_UFS_FMP_ECRYPT_FS=y
 CONFIG_SCSI_DMA=y
 # CONFIG_SCSI_TGT is not set
 # CONFIG_SCSI_NETLINK is not set
@@ -1876,6 +1880,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_DIAG_MODE is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
@@ -2732,7 +2737,7 @@ CONFIG_EXYNOS_DECON_MDNIE_LITE=y
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 # CONFIG_EXYNOS_DECON_LCD_MCD is not set
 CONFIG_LCD_HMT=y
-# CONFIG_LCD_ALPM=y
+# CONFIG_LCD_ALPM is not set
 CONFIG_LCD_BURNIN_CORRECTION=y
 CONFIG_LCD_HBM_INTERPOLATION=y
 CONFIG_PANEL_AID_DIMMING=y
@@ -3638,10 +3643,7 @@ CONFIG_STAGING=y
 # Android
 #
 CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -3721,6 +3723,7 @@ CONFIG_COMMON_CLK=y
 CONFIG_CLKSRC_OF=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
+# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 CONFIG_CLKSRC_EXYNOS_MCT=y
 CONFIG_MAILBOX=y
 # CONFIG_PL320_MBOX is not set
@@ -3951,6 +3954,14 @@ CONFIG_SENSORS_SSP_TMD4903=y
 # CONFIG_SENSORS_SSP_AK09911 is not set
 CONFIG_SENSORS_SSP_MOBEAM=y
 CONFIG_SENSORS_MAX_NOTCHFILTER=y
+
+#
+# Android
+#
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
+# CONFIG_GATOR is not set
 CONFIG_SENSORS_SYSFS=y
 # CONFIG_SENSORS_SSP_ATMEL is not set
 # CONFIG_SENSORS_SSP_AK8963C is not set
@@ -4022,7 +4033,6 @@ CONFIG_SECURE_OS_BOOSTER_API=y
 CONFIG_TRUSTONIC_TRUSTED_UI=y
 CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
 CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
-# CONFIG_GATOR is not set
 CONFIG_TRACE=y
 CONFIG_EXYNOS_NOC_DEBUGGING=y
 CONFIG_EXYNOS_SNAPSHOT=y
@@ -4075,9 +4085,6 @@ CONFIG_EXT4_FS=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_SDCARD_FS=y
-CONFIG_SDCARD_FS_CI_SEARCH=y
-CONFIG_SDCARD_FS_XATTR=y
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
@@ -4092,6 +4099,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 # CONFIG_FS_POSIX_ACL is not set
 CONFIG_FILE_LOCKING=y
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4124,6 +4132,11 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_FAT_VIRTUAL_XATTR=y
 CONFIG_FAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_FAT_SUPPORT_STLOG=y
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_VIRTUAL_XATTR=y
+CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+CONFIG_EXFAT_SUPPORT_STLOG=y
+# CONFIG_NTFS_FS is not set
 CONFIG_SDFAT_FS=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
 # CONFIG_SDFAT_SUPPORT_DIR_SYNC is not set
@@ -4138,11 +4151,8 @@ CONFIG_SDFAT_DEBUG=y
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_VIRTUAL_XATTR=y
-CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_EXFAT_SUPPORT_STLOG=y
-# CONFIG_NTFS_FS is not set
+# CONFIG_SDFAT_DBG_WARNON is not set
+CONFIG_SDFAT_STATISTICS=y
 
 #
 # Pseudo filesystems
@@ -4162,13 +4172,6 @@ CONFIG_CONFIGFS_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
-CONFIG_ECRYPT_FS=y
-# CONFIG_ECRYPT_FS_MESSAGING is not set
-CONFIG_WTL_ENCRYPTION_FILTER=y
-CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
-CONFIG_SDP=y
-# CONFIG_SDP_KEY_DUMP is not set
-CONFIG_DLP=y
 CONFIG_SCFS=y
 # CONFIG_SYSTEM_COMPRESSED is not set
 CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION=y
@@ -4341,7 +4344,6 @@ CONFIG_RCU_CPU_STALL_VERBOSE=y
 # CONFIG_LKDTM is not set
 # CONFIG_NOTIFIER_ERROR_INJECTION is not set
 # CONFIG_FAULT_INJECTION is not set
-# CONFIG_LATENCYTOP is not set
 # CONFIG_DEBUG_PAGEALLOC is not set
 CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
@@ -4390,9 +4392,6 @@ CONFIG_HAVE_ARCH_KGDB=y
 # Samsung Rooting Restriction Feature
 #
 # CONFIG_SEC_RESTRICT_ROOTING is not set
-# CONFIG_SEC_RESTRICT_SETUID is not set
-# CONFIG_SEC_RESTRICT_FORK is not set
-# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 #
 # Security options
@@ -4424,8 +4423,7 @@ CONFIG_MST_LDO=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 # CONFIG_TZ_ICCC_MOS_SUPPORT is not set
-CONFIG_TZ_ICCC_NOS_SUPPORT=y
-CONFIG_TZ_ICCC=y
+# CONFIG_TZ_ICCC_NOS_SUPPORT is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
