--- a/arch/arm64/configs/lineageos_zeroltespr_defconfig
+++ b/arch/arm64/configs/lineageos_zeroltespr_defconfig
@@ -552,7 +552,7 @@ CONFIG_EXYNOS_CL_DVFS_MIF=y
 CONFIG_EXYNOS_MBOX_DEFAULT_POLLING=y
 # CONFIG_EXYNOS_MBOX_INTERRUPT is not set
 CONFIG_EXYNOS_MBOX_POLLING=y
-CONFIG_EXYNOS_APM_VOLTAGE_DEBUG=y
+# CONFIG_EXYNOS_APM_VOLTAGE_DEBUG is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -2632,7 +2632,7 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 # ARM GPU Configuration
 #
 # CONFIG_MALI_T6XX is not set
-CONFIG_MALI_EXYNOS_TRACE=y
+# CONFIG_MALI_EXYNOS_TRACE is not set
 CONFIG_MALI_PLATFORM_THIRDPARTY=y
 # CONFIG_MALI_MIDGARD is not set
 # CONFIG_MALI_MIDGARD_WK04 is not set
@@ -2643,14 +2643,14 @@ CONFIG_MALI_T7XX=y
 CONFIG_MALI_R15P0=y
 CONFIG_MALI_SYSTRACE_SUPPORT=y
 CONFIG_MALI_RT_PM=y
-CONFIG_MALI_DEBUG_SYS=y
+# CONFIG_MALI_DEBUG_SYS is not set
 CONFIG_MALI_SEC_HWCNT=y
 CONFIG_EXYNOS_SOC_NAME=""
 CONFIG_MALI_SEC_CL_BOOST=y
 CONFIG_MALI_SEC_UTILIZATION=y
 CONFIG_MALI_PM_QOS=y
 # CONFIG_MALI_BTS_OPTIMIZATION is not set
-CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
+# CONFIG_MALI_DEBUG_KERNEL_SYSFS is not set
 CONFIG_MALI_EXYNOS_SECURE_RENDERING=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
@@ -3696,7 +3696,7 @@ CONFIG_SEC_REBOOT=y
 CONFIG_SEC_MISC=y
 CONFIG_ARGOS=y
 CONFIG_SEC_SLOW_MODE=y
-CONFIG_SEC_DEBUG=y
+# CONFIG_SEC_DEBUG is not set
 
 #
 # BSP Feature
@@ -3707,7 +3707,7 @@ CONFIG_SEC_BSP=y
 # Samsung TN logging feature
 #
 CONFIG_SEC_AVC_LOG=y
-CONFIG_SEC_DEBUG_TSP_LOG=y
+# CONFIG_SEC_DEBUG_TSP_LOG is not set
 CONFIG_SEC_DEBUG_LAST_KMSG=y
 CONFIG_SEC_DEBUG_TIMA_LOG=y
 # CONFIG_SEC_DEBUG_MDM_SEPERATE_CRASH is not set
@@ -3717,7 +3717,7 @@ CONFIG_SEC_DEBUG_TIMA_LOG=y
 # Samsung TN Power Management Options
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM_DEBUG is not set
 CONFIG_USER_RESET_DEBUG=y
 
 #
@@ -4045,7 +4045,7 @@ CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
 CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
 # CONFIG_GATOR is not set
 CONFIG_TRACE=y
-CONFIG_EXYNOS_NOC_DEBUGGING=y
+# CONFIG_EXYNOS_NOC_DEBUGGING is not set
 CONFIG_EXYNOS_SNAPSHOT=y
 CONFIG_EXYNOS_SNAPSHOT_CALLSTACK=4
 CONFIG_EXYNOS_SNAPSHOT_IRQ_EXIT=y
@@ -4295,7 +4295,7 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set
 # CONFIG_DEBUG_SHIRQ is not set
 CONFIG_LOCKUP_DETECTOR=y
 CONFIG_HARDLOCKUP_DETECTOR_OTHER_CPU=y
@@ -4315,7 +4315,7 @@ CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
-CONFIG_HAVE_DEBUG_KMEMLEAK=y
+# CONFIG_HAVE_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
