arm64/configs: zeroxlte: Enable Exynos MIF boosting
Signed-off-by: Lunarixus <Nathanb644@hotmail.co.uk>

--- a/arch/arm64/configs/lineageos_zerofltespr_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltespr_defconfig
@@ -3802,6 +3802,9 @@ CONFIG_IIO_BUFFER=y
 CONFIG_IIO_KFIFO_BUF=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=45
+CONFIG_DEVFREQ_EXYNOS_MIF_BOOST_FREQ=1464000
 
 #
 # Accelerometers
